[project]
name = "langchain-asyncpg"
version = "0.1.1"
description = "Langchain tooling for asyncpg postgresql library"
readme = "README.md"
authors = [
    { name = "pravez", email = "paul.bretonravez@proton.me" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "langchain-core>=1.2.27",
    "langgraph>=1.1.6",
    "orjson>=3.11.8",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "testcontainers[postgres]>=4.14.2",
]

[[tool.uv.index]]
name = "langchain-asyncpg"
url = "https://test.pypi.org/simple/"
explicit = true
publish-url = "https://test.pypi.org/legacy/"
